--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="./src/assets/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Twin Transition Challenge Landing Page</title>
+		<title>Twin Transition Challenge</title>
 	</head>
 	<body>
 		<div id="root"></div>
